# vet-app-api

./: main.py  pyproject.toml  requirements.txt
mapper/: mappers.py
model/: models.py
repository/: repositories.py
router/: app_routers.py
